src/config/service/worker/snapshots/roadster__config__service__worker__deserialize_tests__deserialize_tests@case_05.snap
---
source: src/config/service/worker/mod.rs
expression: worker_service_config
---
[enqueue-config]
[worker-config.sidekiq]
disable-argument-coercion = true

[sidekiq]
num-workers = 8
balance-strategy = 'round-robin'

[sidekiq.queue-config]

[sidekiq.redis]
uri = 'redis://[Sensitive]'

[sidekiq.redis.enqueue-pool]

[sidekiq.redis.fetch-pool]

[sidekiq.periodic]
stale-cleanup = 'auto-clean-stale'

[pg]
num-workers = 8
balance-strategy = 'round-robin'

[pg.queue-config]

[pg.periodic]
enable = false
stale-cleanup = 'auto-clean-stale'

[pg.install]
enable = false
